Adding welcome text to home page

--- a/Style/style.css
+++ b/Style/style.css
@@ -57,6 +57,9 @@ body {
   padding: 0 1rem;
 }
 
+#services-title{
+  text-align: center;
+}
 /* ==================================================
    HEADER & NAVIGATION
 ================================================== */
