--- a/Style/style.css
+++ b/Style/style.css
@@ -232,10 +232,34 @@ body {
   border-radius: 6px;
 }
 
+/* .CeoBox{
+  border-radius: 5px;
+   width: 100%;
+  height: 470px;
+  justify-items: center;
+  justify-content: center;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);  
+}
+
+.service-slide-img{
+  width: 100%;
+  max-height: 650px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 6px;
+} */
+
 .service-slide figcaption {
   margin-top: 0.8rem;
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+/* figcaption-more-information */
+.figcaption-more-info{
+  /* padding: 5px 2px 5px 2px; */
+  border: 1px solid rgba(0, 183, 255, 0.479);
+  border-radius: 5px;
 }
 
 /* Swipe dots */
