--- a/Style/style.css
+++ b/Style/style.css
@@ -52,9 +52,10 @@ body {
    CONTAINERS
 ================================================== */
 .container {
-  max-width: 1100px;
+  /* max-width: 1100px; */
+  width: 100%;
   margin: 0 auto;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
 }
 
 #services-title{
@@ -204,6 +205,9 @@ body {
 }
 
 .services-slider {
+  width: 100%;
+  margin: 0;
+  padding: 0;
   position: relative;
   overflow: hidden;
   touch-action: pan-y;
@@ -216,12 +220,12 @@ body {
   /* justify-items: center;
   justify-content: center; */
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);  
-
+  width: 100%;
   position: absolute;
   inset: 0;
   opacity: 0;
   transform: translateX(30px);
-  transition: opacity 1s ease, transform 1s ease;
+  transition: opacity 3ms ease, transform 3s ease;
   text-align: center;
 }
 
@@ -236,7 +240,7 @@ body {
   max-height: 650px;
   object-fit: cover;
   object-position: center;
-  border-radius: 6px;
+  /* border-radius: 6px; */
 }
 
 /* .CeoBox{
