--- a/Style/style.css
+++ b/Style/style.css
@@ -51,10 +51,11 @@ body {
 /* ==================================================
    CONTAINERS
 ================================================== */
-.container {
+.container2 {
   /* max-width: 1100px; */
   width: 100%;
   margin: 0 auto;
+  padding-bottom: 20px;
   /* padding: 0 1rem; */
 }
 
@@ -175,6 +176,38 @@ body {
 .hero h2 {
   font-size: clamp(1.8rem, 4vw, 2.6rem);
 }
+
+.container3 {
+display: flex;                 /* Enable flexbox */
+  justify-content: center;       /* Horizontal centering */
+  align-items: center;           /* Vertical centering */
+   height: 5vh;
+  
+
+}
+
+/* Typing text style */
+.type {
+  font-size: clamp(1.3rem, 4vw, 2.5rem); /* Responsive font size */
+  color: #ffffff;               /* Text color */
+  border-right: 3px solid #fff; /* Cursor */
+  padding-right: 6px;           /* Space before cursor */
+  white-space: nowrap;          /* Prevent line break */
+  overflow: hidden;             /* Hide overflow text */
+}
+
+/* Cursor blinking animation */
+@keyframes blink {
+  50% {
+    border-color: transparent;  /* Hide cursor */
+  }
+}
+
+/* Apply blinking effect */
+.type {
+  animation: blink 0.7s infinite;
+}
+
 
 /* ==================================================
    BUTTONS
@@ -314,4 +347,51 @@ body {
   color: white;
   text-align: center;
   padding: 1rem;
+}
+
+
+
+.hero-slider {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  inset: 0;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 1.2s ease-in-out;
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+}
+
+.caption {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  max-width: 700px;
+  padding: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.caption h1 {
+  font-size: clamp(2rem, 5vw, 3.2rem);
+  margin-bottom: 0.5rem;
+}
+
+.caption p {
+  font-size: 1.1rem;
+  opacity: 0.95;
 }
